RegAligner Change History

*** upcoming release ***
- parameterization of HMM now selectable on command line
- probability for empty word for IBM-3/4 can now be fixed on command line
  + the original empty word of Brown et al. can now be used
- speed-up for Viterbi computation of HMM with reduced parameterization
- HMM Viterbi prob is now returned as a long double
- bugfix in count collection for IBM-4

*** release version 0.92 (released on May 08 2012)
- can now specify a fertility limit for IBM-3/4
- improved speed of hillclimbing in IBM-4
- made ICM a little more extensive
- speed-ups for ICM in IBM-4


**** release version 0.9
- first released version, May 02 2012