@@ -14,7 +14,14 @@ INCLUDE += -I common/ -I $(CBCPATH)Clp/src/ -I $(CBCPATH)CoinUtils/src/ -I $(CBC
 #GZLINK = thirdparty/libgzstream.a -lz
 #INCLUDE += -I thirdparty/
 
-all : $(DEBUGDIR) $(OPTDIR) regaligner_swb.debug.L64 regaligner_swb.opt.L64 extractvoc.opt.L64 plain2indices.opt.L64
+all : $(DEBUGDIR) $(OPTDIR) regaligner_swb.debug.L64 regaligner_swb.opt.L64 extractvoc.opt.L64 plain2indices.opt.L64 common/lib/commonlib.debug common/lib/commonlib.opt
+
+common/lib/commonlib.opt : 
+	cd common; make; cd -
+
+common/lib/commonlib.debug :
+	cd common; make; cd -
+
 
 extractvoc.opt.L64 : extract_vocabulary.cc common/lib/commonlib.opt
 	$(LINKER) $(OPTFLAGS) $(INCLUDE) extract_vocabulary.cc common/lib/commonlib.opt $(GZLINK) -o $@
